REGRESSION(r269435): [Debug][GStreamer] Several tests are crashing https://bugs.webkit.org/show_bug.cgi?id=218735 <rdar://problem/71469947>

Patch by Philippe Normand <pnormand@igalia.com> on 2020-11-18
Reviewed by Carlos Garcia Campos.

Cache the referrer value from the main thread before using it in the GStreamer secondary
thread.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::MediaPlayerPrivateGStreamer):
(WebCore::MediaPlayerPrivateGStreamer::sourceSetup):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:
* platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
(webKitWebSrcMakeRequest):
(webKitWebSrcSetMediaPlayer):
* platform/graphics/gstreamer/WebKitWebSourceGStreamer.h:

Canonical link: https://commits.webkit.org/231701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269951 268f45cc-cd09-0410-ab3c-d52691b4dbfc